[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-playwright-platform-backend"
version = "0.1.0"
description = "Backend foundation for the AI Playwright execution platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.3",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "redis>=5.0",
  "alembic>=1.13",
  "playwright>=1.52",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "pytest>=8.3",
]

[tool.setuptools.packages.find]
where = ["src"]
